fix: spacing between domain search and container

--- a/src/components/Tables/GenericTable/GenericTable.module.scss
+++ b/src/components/Tables/GenericTable/GenericTable.module.scss
@@ -69,7 +69,7 @@
 	// Mobile Breakpoints
 	width: 100%;
 	display: grid;
-	margin-top: 24px;
+	margin-top: 16px;
 	padding: 0 8px;
 	grid-template-columns: repeat(auto-fit, minmax(100%, 0.5fr));
 	grid-row-start: 1;
